--- a/fundamentals/main.css
+++ b/fundamentals/main.css
@@ -7,7 +7,7 @@
 */
 
 *{
-    background-color: #0f000e;
+    background-color: #0f0500;
 }
 
 #header-nav{
@@ -17,6 +17,8 @@
     height: auto;
     box-sizing: border-box;
     text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 #welcome{
@@ -35,9 +37,9 @@
 
 .box{
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 500px 50px;
     gap: 100px;
-    padding: 10px;
+    padding: 5px 10px;
     justify-content: center;
 }
 
@@ -59,6 +61,7 @@
     height: auto;
     box-sizing: border-box;
     text-align: center;
+    margin-top: 20px;
 }
 
 h2{
@@ -80,4 +83,16 @@ hr{
     height: 2px;
     border: none;
     width: 100%;
+}
+
+a { 
+    color: inherit;
+    text-decoration: none; 
+    margin: 10px;
+    padding: 10px;
+} 
+
+a:hover{
+    background-color: #f89f5b;
+    border-radius: 10px;
 }
