--- a/fundamentals/contact.css
+++ b/fundamentals/contact.css
@@ -9,26 +9,26 @@ body{
     background-color: #3F1651;
     width: 100%;
     height: 50px;
-    padding-bottom: 5px;
+    padding-bottom: 4px;
     box-sizing: border-box;
     text-align: center;
     align-content: end;
 }
 
-#head-nav{
+#head-nav, #foot-nav{
     font-size: 20px;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
 }
 
 #footer-nav{
-    background-color: #bdf8fb;
-    color: #9C3587;
+    background-color: #3F1651;
     width: 100%;
-    height: auto;
+    height: 100px;
+    padding-bottom: 5px;
     box-sizing: border-box;
     text-align: center;
-    margin-top: 20px;
+    align-content: center;
 }
 
 
@@ -69,6 +69,6 @@ a {
 } 
 
 a:hover{
-    background-color: #FAA6FF;
+    background-color: #FFE0B5;
     border-radius: 10px;
-}
+}   
