--- a/fundamentals/main.css
+++ b/fundamentals/main.css
@@ -1,37 +1,32 @@
-/* 
-#853780 - KINGFISHER DAISY
-#9C3587 - MEDIUM RED VIOLET
-#E53F71 - CERISE
-#f89f5b - SANDY BROWN
-#3F1651 - PAUA
-*/
+
 
 body{
-    background-color:#FFE0B5;
+    background-color:#090C08;
     color: #E87461;
     margin: 0;
 }
 
 #header-nav{
-    background-color: #3F1651;
+    background-color: #912f2f;
     width: 100%;
     height: 50px;
-    padding-bottom: 5px;
+    padding-bottom: 9px;
     box-sizing: border-box;
     text-align: center;
     align-content: end;
+    position: fixed;
+    font-size: 20px;
 }
 
 #head-nav, #foot-nav{
-    font-size: 20px;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
 }
+
+/*------------------------WELCOME FRONT-END-------------------------- */
 #welcome{
-    background-color: #000000;
     color: #9C3587;
     width: 100%;
-    height: auto;
     box-sizing: border-box;
     text-align: center;
 }
@@ -42,11 +37,13 @@ body{
 }
 
 .main-box{
+    height: 700px;
+    background-color: #912f2f;
     display: grid;
     grid-template-columns: auto auto;
     justify-content: center;
     gap: 10px;
-
+    border-radius: 0 0 600px 600px;
 }
 
   
@@ -60,18 +57,40 @@ body{
     width: 400px;
 }
 
+
+/*------------------------PERSONAL PROJECTS-------------------------- */
+
+#project-box{
+    background-color: #090C08;
+    display: grid;
+    grid-template-rows: auto auto;
+    justify-content: center;
+    gap: 5px;
+}
+
+
+#project-box > div {
+    color: #cb5800;
+    font-size: 15px;
+  }
+
+
+  /*------------------------FOOTER NAV-------------------------- */
+
+
 #footer-nav{
-    background-color: #3F1651;
+    background-color: #912f2f;
     width: 100%;
-    height: 50px;
-    padding-bottom: 5px;
+    height: 100px;
+    padding-bottom: 9px;
     box-sizing: border-box;
     text-align: center;
     align-content: center;
+    font-size: 20px;
 }
 
 h2{
-    color: #3F1651;
+    color: #EDE580;
 }
 
 li{
@@ -81,7 +100,7 @@ li{
 
 ul{
     font-size:  17px;
-    color: #853780;
+    color: #A4AF69;
 }
 
 hr{
@@ -100,5 +119,6 @@ a {
 
 a:hover{
     background-color: #FFE0B5;
-    border-radius: 10px 10px 0 0;
+    border-radius: 10px;
+    font-size: larger;
 }
