--- a/fundamentals/contact.css
+++ b/fundamentals/contact.css
@@ -1,57 +1,122 @@
 
 body{
-    background-color:#FFE0B5;
+    background-color:#545553;
     color: #E87461;
     margin: 0;
 }
 
+
+/*------------------------HEADER NAV-------------------------- */
+
 #header-nav{
-    background-color: #3F1651;
+    background-color: #912f2f;
     width: 100%;
     height: 50px;
-    padding-bottom: 4px;
+    padding-bottom: 9px;
     box-sizing: border-box;
     text-align: center;
     align-content: end;
+    position: fixed;
+    font-size: 20px;
 }
 
 #head-nav, #foot-nav{
-    font-size: 20px;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
 }
 
+/*------------------------FOOTER NAV-------------------------- */
+
+
 #footer-nav{
-    background-color: #3F1651;
+    display: flex;
+    background-color: #912f2f;
     width: 100%;
     height: 100px;
-    padding-bottom: 5px;
+    padding-bottom: 9px;
     box-sizing: border-box;
     text-align: center;
-    align-content: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+
+#project-box{
+    display: grid;
+    grid-template-rows: auto auto;
+    justify-content: center;
+    gap: 5px;
+    padding-top: 15px;
+}
+
+
+#project-box > div {
+    color: #cb5800;
+    font-size: 15px;
+  }
+
+/*------------------------MAIN NAV-------------------------- */
+.contact{
+    background-color: whitesmoke;
+    width: fit-content;
+    padding: 10px;
+}
+.note1{
+    display: flex;
+    justify-content: center;
+    color: darkcyan;
+}
+
+.note1 > h1{
+    font-size: 25px;
 }
 
 
 .contact-box{
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: auto auto;
     justify-content: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
-  
+
 .contact-box > div {
-    color: #E87461;
-    padding: 20px 0;
+    color: darkcyan;
+    padding: 20px;
     font-size: 20px;
+    display: flex;
   }
 
-#top{
-    text-align: center;
+#c1r1, #c1r2, #c1r3 {
+    justify-content: end;
 }
 
-
-.contact-grid1 > div{
-    width: 100%;
+#firstName{
+    width: 500px;
 }
+
+#question{
+    width: 500px;
+}
+
+#submitbtn{
+    display: flex;
+    justify-content: center;
+}
+
+input[type=button] {
+    box-sizing: border-box;
+    background-color: darkcyan;
+    border: none;
+    color: white;
+    padding: 10px 22px;
+    border-radius: 10px ;
+    margin: 4px 2px;
+    cursor: pointer;
+    font-size: 15px;
+  }
+
+
 
 
 hr{
@@ -71,4 +136,5 @@ a {
 a:hover{
     background-color: #FFE0B5;
     border-radius: 10px;
-}   
+    font-size: larger;
+}
