--- a/fundamentals/main.css
+++ b/fundamentals/main.css
@@ -6,6 +6,8 @@ body{
     margin: 0;
 }
 
+/*------------------------HEADER NAV-------------------------- */
+
 #header-nav{
     background-color: #912f2f;
     width: 100%;
@@ -66,6 +68,7 @@ body{
     grid-template-rows: auto auto;
     justify-content: center;
     gap: 5px;
+    padding-top: 15px;
 }
 
 
